script/tests/nohup.out
--watch/-w can be omitted, JSON Server 1+ watches for file changes by default
node:events:496
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::3000
    at Server.setupListenHandle [as _listen2] (node:net:1937:16)
    at listenInCluster (node:net:1994:12)
    at Server.listen (node:net:2099:7)
    at App.listen (file:///home/asano.yuki/.nvm/versions/node/v22.14.0/lib/node_modules/json-server/node_modules/@tinyhttp/app/dist/app.js:310:58)
    at file:///home/asano.yuki/.nvm/versions/node/v22.14.0/lib/node_modules/json-server/lib/bin.js:132:5
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1973:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -98,
  syscall: 'listen',
  address: '::',
  port: 3000
}

Node.js v22.14.0
--watch/-w can be omitted, JSON Server 1+ watches for file changes by default
node:events:496
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::5004
    at Server.setupListenHandle [as _listen2] (node:net:1937:16)
    at listenInCluster (node:net:1994:12)
    at Server.listen (node:net:2099:7)
    at App.listen (file:///home/asano.yuki/.nvm/versions/node/v22.14.0/lib/node_modules/json-server/node_modules/@tinyhttp/app/dist/app.js:310:58)
    at file:///home/asano.yuki/.nvm/versions/node/v22.14.0/lib/node_modules/json-server/lib/bin.js:132:5
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1973:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -98,
  syscall: 'listen',
  address: '::',
  port: 5004
}

Node.js v22.14.0
